<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Slot Collect</string>
    <string name="title_activity_main">Establecimientos</string>
    <string name="action_settings">Configuración</string>
    <string name="pref_sql_host">Servidor</string>
    <string name="pref_sql_host_summ">Dirección del servidor</string>
    <string name="pref_sql_port">Puerto</string>
    <string name="pref_sql_user">Usuario</string>
    <string name="pref_sql_password">Contraseña</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_sql_sbname">Base de datos</string>
    <string name="pref_sql_database">Base de datos</string>
    <string name="action_sql_import">Importar</string>
    <string name="title_activity_establecimientos_logic">Establecimientos Logic</string>
    <string name="action_filtrar">Filtrar</string>
    <string name="action_sync_data">Sincronizar</string>
    <string name="connectionSQLerror">xxx</string>
    <string name="errorSQLconnection">Falló la conexión con el servidor SQL</string>
    <string name="title_activity_detalles_establecimiento">Detalles Establecimiento</string>
    <string name="title_activity_recaudacion_maquina">Recaudacion Maquina</string>
    <string name="title_activity_Screen_Slide_Recaudacion">Recaudacion</string>
    <string name="title_activity_prestamos">Prestamos</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_devoluciones_prestamo">Devoluciones Prestamo</string>
    <string name="title_activity_averias_maquina">AveriasMaquina</string>
    <string name="title_activity_incidencia_edit">IncidenciaEdit</string>
    <string name="title_activity_recuperacion_prestamo_edit">RecuperacionPrestamoEdit</string>
    <string name="action_delete">Eliminar</string>
    <string name="pref_recaudador">Recaudador</string>
    <string name="action_prestamos">Prestamos</string>
    <string name="out_office">Fuera de la oficina</string>
    <string name="pref_sql_host_remote_summ">Servidor remoto</string>
    <string name="title_activity_totales_recaudacion">Totales Recaudacion</string>
    <string name="action_totales_all">Totales</string>

</resources>
