<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_sql_host"
        android:title="@string/pref_sql_host"
        android:summary="@string/pref_sql_host_summ"
        android:defaultValue="@string/pref_sql_host"
        />
    <EditTextPreference
        android:key="pref_sql_port"
        android:title="@string/pref_sql_port"
        android:inputType="number"
        android:defaultValue="1433"
        />
    <EditTextPreference
        android:key="pref_sql_user"
        android:title="@string/pref_sql_user"
        />
    <EditTextPreference
        android:key="pref_sql_password"
        android:title="@string/pref_sql_password"
        android:inputType="textPassword"
        />
    <EditTextPreference
        android:key="pref_sql_database"
        android:title="@string/pref_sql_database"
        />
    <EditTextPreference
        android:key="pref_recaudador"
        android:title="@string/pref_recaudador"
        />
</PreferenceScreen>